# vhdl-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
cocotbext_axis_transfer/: __init__.py  axis_transfer.py
rtl/: capturator.vhd  vhdl_utils_lib_pkg.vhd
tests/capturator/: Makefile  test_capturator.py
